--- a/index.html
+++ b/index.html
@@ -8,9 +8,31 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <p>
-    안녕하세요
-  </p>
+  <div>
+    <p>lorem 1</p>
+      <ul>
+        <li>
+          <p>lorem 2</p>
+        </li>
+        <il>
+          <P>lorem 3</P>
+        </il>
+      </ul>
+  </div>
+  <p>lorem 4</p>
+
+  <h1>prev</h1>
+  <h2>joalpa</h2>
+  <h2>lucie</h2>
+
+  <p>lorem, ipsum dolor.</p>
+  <a href="https://search.naver.com" target="_blank">네이버 검색</a>
+  <button type="button">로그인</button>
+
+  
+
+
+
   <script src="main.js"></script>
 </body>
 </html>
